remove pictures not being used and rename main picture

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -48,7 +48,7 @@
     }
     
     .hero {
-        background: url(../../img/main_pic_3.jpeg);
+        background: url(../../img/main_pic.jpeg);
         min-height: 100vh;
         display: -ms-flexbox;
         display: flex;
